--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "host": "vite --host"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.7.1",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.14",
     "axios": "^1.5.0",
