--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.5.0",
     "framer-motion": "^10.16.4",
     "locomotive-scroll": "^5.0.0-beta.8",
+    "lottie-react": "^2.4.1",
     "popmotion": "^11.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
