--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "locomotive-scroll": "^5.0.0-beta.8",
     "lottie-react": "^2.4.1",
     "popmotion": "^11.0.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.2.0",
+    "rect": "^1.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
