--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.14",
     "axios": "^1.5.0",
+    "bootstrap": "^5.3.8",
     "framer-motion": "^10.16.4",
     "locomotive-scroll": "^5.0.0-beta.8",
     "lottie-react": "^2.4.1",
